--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ kramdown:
 #
 owner:
   name: "Minsong Kim"
-  avatar: leonids-logo.png
+  avatar: profile.png
   job: "Software developer"
   bio: "지식을 나누는 블로그입니다 :)"
   email:
