--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ owner:
   avatar: profile.png
   job: "Software developer"
   bio: "지식을 나누는 블로그입니다 :)"
-  email:
+  email: minsong20@naver.com
   disqus-shortname:
   twitter: #username
   facebook: #username
