--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ owner:
   name: "Minsong Kim"
   avatar: profile.png
   job: "Software developer"
+  company: "NHN Entertainment"
   bio: "지식을 나누는 블로그입니다 :)"
   email: 
   disqus-shortname:
