--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ kramdown:
 owner:
   name: "Minsong Kim"
   avatar: profile.png
-  job: "NHN Entertainment-Software developer"
+  job: "NHN Entertainment"
   bio: "지식을 나누는 블로그입니다 :)"
   email: 
   disqus-shortname:
