--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 ####################################
 #
 disqus_url: <https://minsong.disqus.com/admin/>
-disqus_id: <>
+disqus_id: <김민송>
 
 title: Minsong's Blog
 email:
