--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ kramdown:
 owner:
   name: "Minsong Kim"
   avatar: profile.png
-  job: Software Engineer
+  job: Software Developer
   bio: "지식을 나누는 블로그입니다 :)"
   email: 
   disqus : True
